P4PU-997 added business logic to retrieve debtPosition detail
